@@ -1,12 +1,9 @@
 Make Stack more flexible, it's a fixed-length array.
 
 AI stuff
-  Warships should hunt enemies. And origins of torpedoes
+  Warships should hunt origins of torpedoes
 
 Add sounds
 
-Active sonar
-
 Add thermal layer?
-
 
