@@ -167,6 +167,7 @@ private:
 	SDL_Surface *extendtb16[2];
 	SDL_Surface *retracttb16[2];
         SDL_Surface *cutarray;
+        SDL_Surface *sendping;
 	SDL_Surface *assigntrackerwidget[2];
 	SDL_Surface *tracker1[2];
 	SDL_Surface *tracker2[2];
